# MLxPC

./: .gitignore  README.md  algos.ipynb
Libtorch/Basics/: CMakeLists.txt
Libtorch/Multi-Class/: CMakeLists.txt  main.cpp
Pytorch/Basics/: tensors.py
Pytorch/Transfer Learning/: CIFAR-10_Dataset.ipynb  Fixed_Feature_Extractor.ipynb  Using_Autograd.ipynb  VGG16.ipynb
